fix：修复idea检查错误